# tkill-ai

./: Cargo.toml  README.md  install.sh
src/: actions.rs  ai.rs  audio.rs  config.rs  knowledge.rs  main.rs
